Fix IE6 DropDownMenuButton left-aligned (RM-1832)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14708 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/DropDownMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/DropDownMenu.css
@@ -85,7 +85,7 @@ span.DropDownMenuSelect > span.DropDownMenuButton
 {
   display: inline-block;
   top: 0;
-  left: 0;
+  right: -1px;
   height: 14pt;
 }
 
